--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<nav>
-    <a href="/">Home</a>
-    <a href="/resume.html">Resume</a>
+<nav class="bg-gray-800 p-4">
+  <div class="container mx-auto flex justify-center items-center space-x-4">
+    <a href="/" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Home</a>
+    <a href="/resume.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Resume</a>
+    <a href="/deliverables.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Deliverables</a>
+    <a href="/fit.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Fit</a>
+    <a href="/90daygameplan.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">90 Day Gameplan</a>
+    <a href="/goals.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Goals</a>
+    <a href="/fun.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Fun</a>
+    <a href="/thankyou.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Thank You</a>
+  </div>
 </nav>
+
 
 Hi :)
 This is Walter
