--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <a href="/resume.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Resume</a>
     <a href="/deliverables.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Deliverables</a>
     <a href="/fit.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Fit</a>
+    <a href="/responses.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Responses</a>
     <a href="/goals.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Goals</a>
     <a href="/fun.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Fun</a>
     <a href="/thankyou.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Thank You</a>
