--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <div class="container mx-auto flex justify-center items-center space-x-4">
     <a href="/" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Home</a>
     <a href="/resume.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Resume</a>
-    <a href="/deliverables.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Deliverables</a>
-    <a href="/fit.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Fit</a>
-    <a href="/responses.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Responses</a>
+    <a href="/deliverables.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Deliverable Examples</a>
+    <a href="/fit.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Culture Fit</a>
+    <a href="/responses.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Application Responses</a>
     <a href="/goals.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Goals</a>
-    <a href="/fun.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Fun</a>
+    <a href="/fun.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Beyond Work</a>
     <a href="/thankyou.html" class="text-white hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium">Thank You</a>
   </div>
 </nav>
