--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <p class="mt-4 max-w-2xl mx-auto text-slate-600">Most people send a resume. I wanted to build you a deliverable instead.</p>
             </div>
             <div class="max-w-4xl mx-auto">
-                <div class="aspect-w-16 aspect-h-9 bg-slate-200 rounded-xl overflow-hidden shadow-2xl shadow-slate-900/10 border border-slate-200">
+                <div class="aspect-video bg-slate-200 rounded-xl overflow-hidden shadow-2xl shadow-slate-900/10 border border-slate-200">
                      <!-- In a real scenario, you would replace this with your actual video embed code from YouTube, Vimeo, or Loom -->
                     <iframe 
                         src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
