--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         <div class="container mx-auto px-6 text-center fade-in">
             <div class="mb-12">
                 <h2 class="text-sm font-bold uppercase tracking-widest text-sky-500">Introduction</h2>
-                <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">A 60-Second Overview</p>
-                <p class="mt-4 max-w-2xl mx-auto text-slate-600">Most people send a resume. I wanted to build you a deliverable instead.</p>
+                <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">A 60-Second Intro</p>
+                <p class="mt-4 max-w-2xl mx-auto text-slate-600">Nice to meet you!</p>
             </div>
             <div class="max-w-4xl mx-auto">
                 <div class="aspect-video bg-slate-200 rounded-xl overflow-hidden shadow-2xl shadow-slate-900/10 border border-slate-200">
@@ -187,12 +187,13 @@
                     <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Hiring Team</p>
                     <p class="memo-label">FROM:</p><p class="text-slate-800">Walter Petrouchin</p>
                     <p class="memo-label">DATE:</p><p class="text-slate-800">August 19, 2025</p>
-                    <p class="memo-label">SUBJECT:</p><p class="font-semibold text-slate-900">Proposal & Analysis: Your Next Strategy Associate</p>
+                    <p class="memo-label">SUBJECT:</p><p class="font-semibold text-slate-900">Advisory Group Strategy Associate Application</p>
                 </div>
                 <hr class="border-slate-200 my-8">
                 <div class="prose prose-slate max-w-none text-slate-600">
                     <p>This document presents the case for my candidacy as the optimal choice for the Strategy Associate role. The following analysis demonstrates a direct alignment with Acquisition.com's core values, a proven capacity to deliver against the role's required results, and the tangible skills in framework development and data analysis necessary to create immediate impact.</p>
-                    <p></p>
+                    <p>This website serves as a live demonstration of my commitment and a tangible first deliverable. Rather than simply describing my skills, I believe in showing them. My objective is to provide a clear, concise, and high-value executive summary of the strategic perspective I would bring to Acquisition.com.
+Here, you'll find a preliminary analysis of a potential opportunity, a sample playbook outlining my strategic process, and a clear list of deliverables you can expect from me in the first 90 days. This is my application in action.</p>
                 </div>
             </div>
         </div>
