--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="text-center mb-12">
                 <h2 class="text-sm font-bold uppercase tracking-widest text-sky-500">My Approach</h2>
                 <p class="mt-3 text-3xl md:text-4xl font-bold text-slate-900">My First Deliverable To You</p>
-                <p class="mt-4 max-w-2xl mx-auto text-slate-600">This site is a live demonstration of the clarity, quality, and initiative I bring to my work. Below is a summary of my proposal.</p>
+                <p class="mt-4 max-w-2xl mx-auto text-slate-600">This site is a live demonstration of the clarity, quality, and initiative I bring to my work. I know you have a memo-writing culture so I wrote you one!</p>
             </div>
             <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200">
                 <div class="memo-grid items-center mb-6 text-sm md:text-base">
