--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                 </div>
                 <hr class="border-slate-200 my-8">
                 <div class="prose prose-slate max-w-none text-slate-600">
-                    <p>This document presents the case for my candidacy as the optimal choice for the Strategy Associate role. The following analysis demonstrates a direct alignment with Acquisition.com's core values, a proven capacity to deliver against the role's required results, and the tangible skills in framework development and data analysis necessary to create immediate impact.</p>
-                    <p>This website serves as a live demonstration of my commitment and a tangible first deliverable. Rather than simply describing my skills, I believe in showing them. My objective is to provide a clear, concise, and high-value executive summary of the strategic perspective I would bring to Acquisition.com.
-Here, you'll find a preliminary analysis of a potential opportunity, a sample playbook outlining my strategic process, and a clear list of deliverables you can expect from me in the first 90 days. This is my application in action.</p>
+                    <p>This website serves as a live demonstration of my work ethic, commitment to excellence, and a tangible first deliverable.</p>
+                    <p>Rather than simply describing my skills, I believe in showing them. My objective is to provide a clear, concise, and high-value executive summary of the strategic perspective I would bring to Acquisition.com.
+This is my application in action.</p>
                 </div>
             </div>
         </div>
