--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
             <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 rounded-xl shadow-2xl shadow-slate-900/10 border border-slate-200">
                 <div class="memo-grid items-center mb-6 text-sm md:text-base">
-                    <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Hiring Team</p>
+                    <p class="memo-label">TO:</p><p class="text-slate-800">Acquisition.com Recruiting Team</p>
                     <p class="memo-label">FROM:</p><p class="text-slate-800">Walter Petrouchin</p>
                     <p class="memo-label">DATE:</p><p class="text-slate-800">August 19, 2025</p>
                     <p class="memo-label">SUBJECT:</p><p class="font-semibold text-slate-900">Advisory Group Strategy Associate Application</p>
