--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
                 <hr class="border-slate-200 my-8">
                 <div class="prose prose-slate max-w-none text-slate-600">
                     <p>This website serves as a live demonstration of my work ethic, commitment to excellence, and a tangible first deliverable.</p>
-                    <p>Rather than simply describing my skills, I believe in showing them. My objective is to provide a clear, concise, and high-value executive summary of the strategic perspective I would bring to Acquisition.com.
-This is my application in action.</p>
+                    <p class="mt-4">Rather than simply describing my skills, I believe in showing them. My objective is to provide a clear, concise, and high-value executive summary of the strategic perspective I would bring to Acquisition.com. This is my application in action.</p>
                 </div>
             </div>
         </div>
