--- a/resume.html
+++ b/resume.html
@@ -146,10 +146,10 @@
                                             <div class="flex-shrink-0 h-12 w-12 rounded-lg bg-white flex items-center justify-center ring-1 ring-slate-200">
                                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
                                             </div>
-                                            <h3 class="text-xl font-bold text-slate-800">Entrepreneurial Roots</h3>
+                                            <h3 class="text-xl font-bold text-slate-800">Entrepreneurial Foundations</h3>
                                         </div>
-                                        <p class="text-slate-600">Growing up in my family's business, I was client-facing from age 6. By 10, I was drafting emails for six-figure deals, learning to communicate with high-net-worth clients and prepare professional deliverables long before my peers.</p>
-                                        <p class="mt-3 text-sm font-semibold text-sky-600">Relevance: This embedded a deep, intuitive understanding of business operations, client management, and the relentless work ethic required to succeed—core traits for any strategy role.</p>
+                                        <p class="text-slate-600">I grew up in my family's windows and doors business. I was demonstrating products at trade shows at age 6 and drafting client emails for <span class="font-bold text-2xl text-slate-800">$100k+</span> deals by age 10. This wasn't just a job; it was a masterclass in business operations.</p>
+                                        <p class="mt-3 text-sm font-semibold text-sky-600">Relevance: This embedded a deep, intuitive understanding of client management, high-stakes communication, and the relentless work ethic required to drive results—core traits for any strategy role.</p>
                                     </div>
                                 </div>
                                 <div class="hidden md:block w-1/2"></div>
@@ -168,8 +168,8 @@
                                             </div>
                                             <h3 class="text-xl font-bold text-slate-800">Accelerated Education</h3>
                                         </div>
-                                        <p class="text-slate-600">I graduated from USC in <span class="font-bold text-2xl text-slate-800">3</span> years with a <span class="font-bold text-2xl text-slate-800">3.9</span> GPA in Accounting & Computer Science. After a C on my first programming exam, I doubled down, mastering the material to become a TA for the same course a semester later.</p>
-                                        <p class="mt-3 text-sm font-semibold text-sky-600">Relevance: This demonstrates resilience and a steep learning curve. The combination of accounting (the language of business) and programming (the language of logic and systems) provides a powerful analytical foundation.</p>
+                                        <p class="text-slate-600">I graduated from USC in <span class="font-bold text-2xl text-slate-800">3</span> years with a <span class="font-bold text-2xl text-slate-800">3.9</span> GPA in Accounting & Computer Science. After earning a C on my first programming exam, I doubled down, mastering the material to become a TA for the same course a semester later.</p>
+                                        <p class="mt-3 text-sm font-semibold text-sky-600">Relevance: This demonstrates resilience and an aggressive learning curve. The combination of accounting (the language of business) and programming (the language of logic) provides a powerful analytical foundation.</p>
                                     </div>
                                 </div>
                                 <div class="hidden md:block w-1/2"></div>
@@ -188,8 +188,28 @@
                                             </div>
                                             <h3 class="text-xl font-bold text-slate-800">Legal & Analytical Acumen</h3>
                                         </div>
-                                        <p class="text-slate-600">Inspired by defending my family's business in a <span class="font-bold text-2xl text-slate-800">$9,999</span> lawsuit at age 18, I pursued a JD to master high-stakes communication and argumentation. This experience, combined with a <span class="font-bold text-2xl text-slate-800">740</span> GMAT score, honed my ability to perform quick, accurate, back-of-the-napkin analysis under pressure.</p>
-                                        <p class="mt-3 text-sm font-semibold text-sky-600">Relevance: Law school provides a rigorous framework for structured thinking and persuasive communication—essential for creating compelling memos and strategic recommendations.</p>
+                                        <p class="text-slate-600">Inspired by defending my family's business in a <span class="font-bold text-2xl text-slate-800">$9,999</span> lawsuit at age 18, I pursued a JD to master high-stakes communication. This experience, combined with a <span class="font-bold text-2xl text-slate-800">740</span> GMAT score, honed my ability to perform quick, accurate, back-of-the-napkin analysis under pressure.</p>
+                                        <p class="mt-3 text-sm font-semibold text-sky-600">Relevance: Law school provides a rigorous framework for structured thinking and persuasive communication—essential for creating compelling memos and strategic recommendations for portfolio companies.</p>
+                                    </div>
+                                </div>
+                                <div class="hidden md:block w-1/2"></div>
+                            </div>
+                            <div class="absolute left-4 md:left-1/2 top-4 -ml-2 h-4 w-4 rounded-full bg-sky-500 ring-8 ring-white"></div>
+                        </div>
+                        
+                        <!-- Timeline Item 4: Leadership -->
+                        <div class="relative mb-12">
+                            <div class="md:flex items-center md:flex-row-reverse">
+                                <div class="md:w-1/2 md:pl-8">
+                                    <div class="p-6 bg-slate-50 border border-slate-200 rounded-xl shadow-md">
+                                        <div class="flex items-center gap-x-4 mb-3">
+                                            <div class="flex-shrink-0 h-12 w-12 rounded-lg bg-white flex items-center justify-center ring-1 ring-slate-200">
+                                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sky-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.653-.125-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.653.125-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
+                                            </div>
+                                            <h3 class="text-xl font-bold text-slate-800">Proactive Leadership</h3>
+                                        </div>
+                                        <p class="text-slate-600">At every opportunity, I ran for and secured leadership positions. As President of the First Generation Professionals, I increased organizational funding by <span class="font-bold text-2xl text-slate-800">300%</span>, from $3k to $12k per semester, by identifying new funding sources and building consensus for strategic initiatives.</p>
+                                        <p class="mt-3 text-sm font-semibold text-sky-600">Relevance: This demonstrates a consistent pattern of taking initiative, owning outcomes, and creating value beyond the scope of a defined role—key indicators of a future leader.</p>
                                     </div>
                                 </div>
                                 <div class="hidden md:block w-1/2"></div>
