--- a/goals.html
+++ b/goals.html
@@ -30,6 +30,14 @@
         #mobile-menu {
             transition: opacity 0.3s ease-in-out;
         }
+        /* NEW: Goal card hover effect */
+        .goal-card {
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+        .goal-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.15);
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -95,19 +103,19 @@
                 </div>
                 <div class="grid md:grid-cols-1 lg:grid-cols-3 gap-8 text-center">
                     <!-- 30 Days -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200">
+                    <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200">
                         <div class="text-sky-500 font-bold text-lg">First 30 Days</div>
                         <h3 class="text-2xl font-semibold mt-2 text-slate-800">Placeholder</h3>
                         <p class="text-slate-600 mt-4">X</p>
                     </div>
                     <!-- 60 Days -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 transform lg:scale-105 lg:shadow-2xl">
+                    <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200">
                         <div class="text-sky-500 font-bold text-lg">First 60 Days</div>
                         <h3 class="text-2xl font-semibold mt-2 text-slate-800">Placeholder</h3>
                         <p class="text-slate-600 mt-4">X</p>
                     </div>
                     <!-- 90 Days -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200">
+                    <div class="goal-card bg-white p-8 rounded-xl shadow-lg border border-slate-200">
                         <div class="text-sky-500 font-bold text-lg">First 90 Days</div>
                         <h3 class="text-2xl font-semibold mt-2 text-slate-800">Placeholder</h3>
                         <p class="text-slate-600 mt-4">X</p>
