--- a/thankyou.html
+++ b/thankyou.html
@@ -212,7 +212,9 @@
                     </div>
                     <div class="text-left mt-4">
                         <p class="text-slate-600">You've made it to the final step. This is a quick, fun quiz to see how well you've gotten to know me through this site. It should only take a minute, and there might be a small thank you for your team at the end!</p>
-                        <button id="start-quiz-button" class="mt-8 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors">Start the Quiz</button>
+                        <div class="text-center">
+                            <button id="start-quiz-button" class="mt-8 bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg hover:bg-sky-600 transition-colors inline-block">Start the Quiz</button>
+                        </div>
                     </div>
                 `;
             };
